--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,22 @@
 language: generic
 sudo: requered
 services:
-  - docker
+- docker
 env:
   global:
-    - CLOUDSDK_CORE_DISABLE_PROMTS=1
+  - CLOUDSDK_CORE_DISABLE_PROMTS=1
 before_install:
-  - echo 'Hello world'
-  - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in gcloud-account.json.enc -out gcloud-account.json -d
-  - curl http://sdk.cloud.google.com | bash > /dev/null;
-  - source @HOME/google-cloud-sdk/path.bash.inc
-  - gcloud components update kubectl
-  - gcloud auth activate-service-account --key-file service-account.json
-  - gcloud config set project janus-262604
-  - gcloud config set compute/zone europe-west6-c
-  - gcloud container clusters get-credentials standard-cluster-1
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+- openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv
+  -in gcloud-account.json.enc -out gcloud-account.json -d
+- echo 'Hello world'
+- curl http://sdk.cloud.google.com | bash > /dev/null;
+- source @HOME/google-cloud-sdk/path.bash.inc
+- gcloud components update kubectl
+- gcloud auth activate-service-account --key-file service-account.json
+- gcloud config set project janus-262604
+- gcloud config set compute/zone europe-west6-c
+- gcloud container clusters get-credentials standard-cluster-1
+- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 deploy:
   provider: script
   script: bash ./deploy.sh
